# pythonOnline_store

./: README.md  pyproject.toml
src/: category.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
